      pulseManagerThread member variables. Fixes crashes on OS X and Windows
      if X2Go Client terminates before these objects have been created at run
      time (for instance when running x2goclient --help.)
    - src/onmainwindow.cpp: correctly guard the new lines from the previous
      commit. Fixes compile issues on Linux and other systems.

  [ Bernard Cafarelli ]
  * New upstream version (4.1.0.0):
    - {res/,x2goclient.pro}: rename .rcc files to .qrc. Fixes: #1096. "rcc" is
      the extension for compiled resource files, whereas "qrc" is the mapping
      file. Qt5 stumbles upon that - i.e., it doesn't try to compile files
      with the "rcc" extension, while Qt4 did.
    - res/: fix up previous change, the renaming of changelog.qrc was not
      correctly committed.

  [ Jason Alavaliant ]
  * New upstream version (4.1.0.0):
    - src/{onmainwindow.{cpp,h},help.cpp}: modify autostart option to support
      multiple autostart apps at the same time. Fixes: #1024.

  [ Oleksandr Shneyder ]
  * New upstream version (4.1.0.0):
    - src/onmainwindow.cpp: fix SSHFS on Windows client. Fixes: #1105.

  [ Sébastien Ducoulombier ]
  * New upstream version (4.1.0.0):
    - res/i18n/x2goclient_fr.ts: update French translation file.

  [ Daniel Lindgren ]
  * New upstream version (4.1.0.0):
    - res/i18n/x2goclient_sv.ts: update Swedish translation file.

  [ Ricardo Díaz Martín ]
  * New upstream release (4.1.0.0):
    - res/i18n/x2goclient_es.ts: update Spanish translation file.

 -- X2Go Release Manager <git-admin@x2go.org>  Mon, 19 Sep 2016 09:07:07 +0200

x2goclient (4.0.5.2-0x2go1) unstable; urgency=medium

  [ Klaus Ade Johnstad ]
  * New upstream version (4.0.5.2):
    - res/i18n/x2goclient_nb_no.ts: update Bokmål (Norway) translation file.

  [ Mihai Moldovan ]
  * New upstream release (4.0.5.2):
    - res/i18n/x2goclient_nb_no.ts: fixup translation by respecting the
      original messages' format, typo fixes and other changes.